deploy: 79baee5f32fef470352f5d93d88d47b5d8bf4c0e

--- a/index.html
+++ b/index.html
@@ -8,61 +8,61 @@
     <title>Math Trainer Demo</title>
   <link rel="stylesheet" href="/mathtrainer/assets/exercises-_id_-index.cbd31bb0.css" /></head>
   <body class="astro-2LPR77OT">
-    <h1>Home Page</h1><div>
+    <h2>Mr.Bovell - Math Trainer Demo</h2><div>
       <a href="./exercises/add-up-to-ten">
-        <h2>Adding numbers up to 10</h2>
+        <h3>Adding numbers up to 10</h3>
       </a>
     </div><div>
       <a href="./exercises/subtract-up-to-ten">
-        <h2>Subtracting numbers up to 10</h2>
+        <h3>Subtracting numbers up to 10</h3>
       </a>
     </div><div>
       <a href="./exercises/add-up-to-100">
-        <h2>Adding numbers up to 100</h2>
+        <h3>Adding numbers up to 100</h3>
       </a>
     </div><div>
       <a href="./exercises/subtract-up-to-100">
-        <h2>Subtracting numbers up to 100</h2>
+        <h3>Subtracting numbers up to 100</h3>
       </a>
     </div><div>
       <a href="./exercises/multiply-up-to-five">
-        <h2>Multiplying numbers up to 5</h2>
+        <h3>Multiplying numbers up to 5</h3>
       </a>
     </div><div>
       <a href="./exercises/divide-up-to-five">
-        <h2>Dividing by numbers up to 5</h2>
+        <h3>Dividing by numbers up to 5</h3>
       </a>
     </div><div>
       <a href="./exercises/multiply-from-6-10">
-        <h2>Multiplying numbers from 6-10</h2>
+        <h3>Multiplying numbers from 6-10</h3>
       </a>
     </div><div>
       <a href="./exercises/divide-from-6-10">
-        <h2>Dividing by numbers from 6-10</h2>
+        <h3>Dividing by numbers from 6-10</h3>
       </a>
     </div><div>
       <a href="./exercises/multiply-by-11-12">
-        <h2>Multiplying numbers by 11 and 12</h2>
+        <h3>Multiplying numbers by 11 and 12</h3>
       </a>
     </div><div>
       <a href="./exercises/divide-by-11-12">
-        <h2>Dividing numbers by 11 and 12</h2>
+        <h3>Dividing numbers by 11 and 12</h3>
       </a>
     </div><div>
       <a href="./exercises/multiply-from-13-15">
-        <h2>Multiplying numbers from 13-15</h2>
+        <h3>Multiplying numbers from 13-15</h3>
       </a>
     </div><div>
       <a href="./exercises/divide-from-13-15">
-        <h2>Dividing by numbers from 13-15</h2>
+        <h3>Dividing by numbers from 13-15</h3>
       </a>
     </div><div>
       <a href="./exercises/roots-up-to-16">
-        <h2>Square numbers and square roots up to 16x16</h2>
+        <h3>Square numbers and square roots up to 16x16</h3>
       </a>
     </div><div>
       <a href="./exercises/common-fractions-to-percentages">
-        <h2>Converting common fractions to percentages</h2>
+        <h3>Converting common fractions to percentages</h3>
       </a>
     </div>
     
