deploy: bf2ce65d0ef1c8e0b37bffb64822ce575e64b537

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       </li>
   </ul><br><h3>More:</h3><ul>
     <li>
-      <a href="./build"> Combine Multiple Exercises</a>
+      <a href="./build/"> Combine Multiple Exercises</a>
     </li>
   </ul>
     
