deploy: 1248e14640e26777884c3dd0f5d1b720721cea5b

--- a/index.html
+++ b/index.html
@@ -10,31 +10,25 @@
   <body class="astro-2LPR77OT">
     <h2>Mr.Bovell - Math Trainer Demo</h2><h3>Exercises:</h3><ul>
     <li>
-        <a href="./exercises/add-up-to-ten">Adding numbers up to 10</a>
+        <a href="./exercises/add-up-to-ten">Adding numbers from 1 to 10</a>
       </li><li>
-        <a href="./exercises/subtract-up-to-ten">Subtracting numbers up to 10</a>
+        <a href="./exercises/subtract-up-to-ten">Subtracting numbers from 1 to 10</a>
       </li><li>
-        <a href="./exercises/add-up-to-100">Adding numbers up to 100</a>
+        <a href="./exercises/add-up-to-100">Adding numbers from 1 to 100</a>
       </li><li>
-        <a href="./exercises/subtract-up-to-100">Subtracting numbers up to 100</a>
+        <a href="./exercises/subtract-up-to-100">Subtracting numbers from 1 to 100</a>
       </li><li>
-        <a href="./exercises/multiply-up-to-five">Multiplying numbers up to 5</a>
+        <a href="./exercises/multiply-from-1-10">Multiplying numbers from 1 to 10</a>
       </li><li>
-        <a href="./exercises/divide-up-to-five">Dividing by numbers up to 5</a>
+        <a href="./exercises/divide-from-1-10">Dividing by numbers from 1 to 10</a>
       </li><li>
-        <a href="./exercises/multiply-from-6-10">Multiplying numbers from 6-10</a>
+        <a href="./exercises/multiply-by-11-12">Multiplying numbers from 1 to 12</a>
       </li><li>
-        <a href="./exercises/divide-from-6-10">Dividing by numbers from 6-10</a>
+        <a href="./exercises/divide-by-11-12">Dividing by numbers from 1 to 12</a>
       </li><li>
-        <a href="./exercises/multiply-by-11-12">Multiplying numbers by 11 and 12</a>
+        <a href="./exercises/squares-up-to-16">Square numbers up to 16x16</a>
       </li><li>
-        <a href="./exercises/divide-by-11-12">Dividing numbers by 11 and 12</a>
-      </li><li>
-        <a href="./exercises/multiply-from-13-15">Multiplying numbers from 13-15</a>
-      </li><li>
-        <a href="./exercises/divide-from-13-15">Dividing by numbers from 13-15</a>
-      </li><li>
-        <a href="./exercises/roots-up-to-16">Square numbers and square roots up to 16x16</a>
+        <a href="./exercises/roots-up-to-16">Square roots up to 16</a>
       </li><li>
         <a href="./exercises/common-fractions-to-percentages">Converting common fractions to percentages</a>
       </li>
